fixed img spacing

--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,41 @@
 body{
     background-color: #65A2B9;
+    padding: 0.5em;
+	margin: auto;
+	line-height: 1.75;
+	text-align: left;
+	color: black;
+}
+
+h1{
+    text-align: center; 
+    color: black;
+    padding: 1em;
+    margin:auto ;
+    position: relative;
+ }
+
+ h2{
+    text-align: left;
+    margin: auto;
+    color: black;
+    padding: 1em;
+	position:relative;
+  }
+
+  h3{
+    text-align: left;
+    margin: auto;
+    color: black;
+    padding: 1em;
+  } 
+
+  .image-container {
+    display: flex;
+    justify-content: space-between; 
+}
+
+#bosnia, #code, #goku{
+    height: 400px;
+    width: 400px; 
 }
